k3s/resources/minio/500-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: tabletop
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #           - key: disktype
      #             operator: In
      #             values:
      #               - hdd
      volumes:
        - name: s3-pv-storage
          persistentVolumeClaim:
            claimName: s3-pvc
      containers:
      - name: minio
        image: quay.io/minio/minio:RELEASE.2023-05-04T21-44-30Z
        args: ['server', '--console-address', ':9001', '/data']
        imagePullPolicy: IfNotPresent
        ports:
          - name: minio
            containerPort: 9000
        volumeMounts:
          - name: s3-pv-storage
            mountPath: /data
